[package]
name = "rascal"
version = "0.1.0"
authors = ["eap"]

[dependencies]
opencl = { git = "https://github.com/pierzchalski/rust-opencl.git" }
bitflags = "0.3.2"
num = "0.1.27"
libc = "0.1.8"

[lib]
name = "rascal"

[[example]]
name = "platform"
path = "examples/platform/main.rs"

[[example]]
name = "demo"
path = "examples/demo/main.rs"
